# basic_interpreter

./: .gitignore  pyproject.toml
basic_interpreter/: basic.py  grammar.txt  script.myopl  shell.py  strings_with_arrows.py
tests/: test_function_call.py
